# dsdown

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/dsdown/: __init__.py  __main__.py  app.py  config.py  utils.py
src/dsdown/models/: __init__.py  chapter.py  database.py  download.py  series.py
src/dsdown/scraper/: __init__.py  chapter_parser.py  client.py  parser.py  series_parser.py
src/dsdown/screens/: __init__.py  confirm_dialog.py  follow_dialog.py  main_screen.py
src/dsdown/services/: __init__.py  chapter_service.py  comicinfo.py  download_service.py  series_service.py
src/dsdown/widgets/: __init__.py  chapter_list.py  download_queue.py  series_panel.py  status_bar.py
tests/: conftest.py  test_chapter_parser.py  test_live_smoke.py  test_releases_parser.py  test_series_parser.py
tests/fixtures/: chapter_no_series.html  chapter_with_series.html  releases_empty.html  releases_page.html  series_page.html
